--- a/CHANGES
+++ b/CHANGES
@@ -8,4 +8,4 @@ Changes file for Dancer2::Logger::LogAny
  
 0.9901    2019-08-17 01:11:01-04:00 America/New_York
 
-  - Distro setup.
+  - Distro setup
